flux/clusters/azalab-0/manifests/apps/spinyourlife/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spinyourlife
  namespace: libsql
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: spinyourlife
  template:
    metadata:
      labels:
        app: spinyourlife
    spec:
      imagePullSecrets:
        - name: spinyourlife-ghcr
      containers:
        - name: spinyourlife
          image: ghcr.io/s1dny/spinyourlife:main-10.1.0-a85c0844ad9023f4a1c1123995b0c1b971c89027@sha256:722ee1ffe145f54b25cb48544a194ce15b7a8b886b2f740b4e9a871e9a76817d # {"$imagepolicy": "flux-system:spinyourlife"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/health/live
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/health/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 30
            failureThreshold: 1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: spinyourlife
  namespace: libsql
spec:
  selector:
    app: spinyourlife
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinyourlife
  namespace: libsql
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: spinyour.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spinyourlife
                port:
                  number: 3000
